previous version link

--- a/client/index.html
+++ b/client/index.html
@@ -18,8 +18,10 @@
       <nav class="navbar">
         <button class="reset"><i class="fas fa-repeat"></i> Reset</button>
         
-        <a href="https://ai-cohort-answers.netlify.app/" target="_blank"><i class="fa-sharp fa-solid fa-circle-info"></i>
-           FAQs</a>
+        <a href="https://ai-cohort-20-faqs.netlify.app/" target="_blank"><i class="fa-sharp fa-solid fa-circle-info"></i>
+        FAQs</a><br><br><br>
+        <a href="https://ai-cohort.vercel.app" target="_blank" class="Previous"><i class="fa fa-user"></i>
+        Previous</a>
            <p class="convo"><i>  
             Sorry, but it is not feasible to preserve conversations. In case of slower internet speeds or heavy traffic on the server, it may take a while to receive a response.</i></p>   
       </nav>
