slight style change

--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
       
     </div>
     <div id="app">
-      <img src="./assets/loadingimage.svg" id="loading" >
+      <img src="./assets/loader.svg" id="loading" >
 
       <div id="starter">
         <h1>AI Cohort 2.0</h1>
