--- a/client/index.html
+++ b/client/index.html
@@ -12,20 +12,20 @@
     <div class="header">
       <div class="logo">
         <img src="./assets/favicon.png" alt="aichatbot">
-        <h3>AI Cohort 2.0</h3>
-        <p>Your creative companion</p>
+        <h3>AI cohort 2.0</h3>
+        <p>Your creative AI companion</p>
       </div>
       <nav class="navbar">
         <button class="reset"><i class="fas fa-repeat"></i> Reset</button>
         
-        <a href="https://ai-cohort-20-faqs.netlify.app/" target="_blank"><i class="fa-sharp fa-solid fa-circle-info"></i>
+        <a href="https://ai-cohort-20-faqs.netlify.app/" target="_blank"><i class="fa-solid fa-circle-question"></i>
         FAQs</a><br><br><br>
         <a href="https://ai-cohort.vercel.app" target="_blank" class="Previous"><i class="fa fa-user"></i>
         Previous</a>
            <p class="convo"><i>  
             Sorry, but it is not feasible to preserve conversations. In case of slower internet speeds or heavy traffic on the server, it may take a while to receive a response.</i></p>   
       </nav>
-      <div id="theme-toggler" class="fas fa-moon"></div>
+      <div id="theme-toggler" class="fas fa-sun"></div>
       <div class="head-menu">
         <h1 class="responsive">AI Cohort</h1>
         <div id="menu-btn" class="fa fa-bars"></div>
@@ -90,7 +90,7 @@
       
     </div>
 
-    <button id="scrollBtn"><img src="./assets/scroll down.png" alt=""></button>
+    <button id="scrollBtn"><i class="fa-solid fa-arrow-down"></i></button>
     <div id="bottom"></div>
     <script type="module" src="script.js"></script>
   </body>
