--- a/client/index.html
+++ b/client/index.html
@@ -16,16 +16,16 @@
         <p>Your creative AI companion</p>
       </div>
       <nav class="navbar">
-        <button class="reset"><i class="fas fa-repeat"></i> Reset</button>
+        <button class="reset"><i class="fas fa-repeat"></i> Reset Chat</button>
         
         <a href="https://ai-cohort-20-faqs.netlify.app/" target="_blank"><i class="fa-solid fa-circle-question"></i>
-        FAQs</a><br><br><br>
+        FAQs</a>
         <a href="https://ai-cohort.vercel.app" target="_blank" class="Previous"><i class="fa fa-user"></i>
-        Previous</a>
+        Previous Version</a>
            <p class="convo"><i>  
-            Sorry, but it is not feasible to preserve conversations. In case of slower internet speeds or heavy traffic on the server, it may take a while to receive a response.</i></p>   
+            Sorry, but it is not feasible to preserve conversations. In case of slower internet speeds or heavy traffic on the server, it may take a while to receive a response.<br><br> AI Cohort will take a little longer to respond if you have a complex prompt.</i></p>   
       </nav>
-      <div id="theme-toggler" class="fas fa-sun"></div>
+      <div id="theme-toggler" class="fa fa-sun"></div>
       <div class="head-menu">
         <h1 class="responsive">AI Cohort</h1>
         <div id="menu-btn" class="fa fa-bars"></div>
@@ -85,7 +85,7 @@
       <div id="chat-container"></div>
       <form action="">
         <textarea name="message" id="message" rows="1" cols="1" placeholder="Send a message..."></textarea>
-        <button type="submit"><img src="./assets/sender.png" alt="" srcset=""></button>
+        <button type="submit" id="submitBtn"><img src="./assets/sender.png" alt="" srcset=""></button>
       </form>
       
     </div>
