--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Cohort 2.0</title>
+    <title>Luna AI</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -12,7 +12,7 @@
     <div class="header">
       <div class="logo">
         <img src="./assets/favicon.png" alt="aichatbot">
-        <h3>AI cohort 2.0</h3>
+        <h3>Luna AI</h3>
         <p>Your creative AI companion</p>
       </div>
       <nav class="navbar">
@@ -23,11 +23,11 @@
         <a href="https://ai-cohort.vercel.app" target="_blank" class="Previous"><i class="fa fa-user"></i>
         Previous Version</a>
            <p class="convo"><i>  
-            Sorry, but it is not feasible to preserve conversations. In case of slower internet speeds or heavy traffic on the server, it may take a while to receive a response.<br><br> AI Cohort will take a little longer to respond if you have a complex prompt.</i></p>   
+            Sorry, but it is not feasible to preserve conversations. In case of slower internet speeds or heavy traffic on the server, it may take a while to receive a response.<br><br> Luna will take a little longer to respond if you have a complex prompt.</i></p>   
       </nav>
       <div id="theme-toggler" class="fa fa-sun"></div>
       <div class="head-menu">
-        <h1 class="responsive">AI Cohort</h1>
+        <h1 class="responsive">Luna AI</h1>
         <div id="menu-btn" class="fa fa-bars"></div>
         <div class="reset-btn">
         
@@ -41,7 +41,7 @@
       <img src="./assets/loader.svg" id="loading" >
 
       <div id="starter">
-        <h1>AI Cohort 2.0</h1>
+        <h1>Luna AI</h1>
         <h3>Please Read to understand the project</h3>
         <div class="content-1" id="del">
           <i class="fa  fa-circle-info"></i>
@@ -49,8 +49,8 @@
           <div class="paragraphs">
             <p> "Clearly define the purpose and scope of the chatbot - This will help you understand what the chatbot can and cannot do"</p>
           <p> "Keep it simple and concise - A chatbot should be easy to use and not overwhelm the user with too many options or information" </p>
-          <p> "Incorporate natural language processing - AI Cohort can understand natural language, so ensure that its responses are natural and human-like"</p>
-          <p> "Use multiple response options - AI Cohort can offer several response options based on the user's input. This offers a better chance of providing the user with an accurate response"</p>
+          <p> "Incorporate natural language processing - Luna AI can understand natural language, so ensure that its responses are natural and human-like"</p>
+          <p> "Use multiple response options - Luna AI can offer several response options based on the user's input. This offers a better chance of providing the user with an accurate response"</p>
           </div>
           
         </div>
