--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
       <nav class="navbar">
         <button class="reset"><i class="fas fa-repeat"></i> Reset Chat</button>
         
-        <a href="https://ai-cohort-20-faqs.netlify.app/" target="_blank"><i class="fa-solid fa-circle-question"></i>
+        <a href="https://lunaai-faqs.netlify.app/" target="_blank"><i class="fa-solid fa-circle-question"></i>
         FAQs</a>
         <a href="https://ai-cohort.vercel.app" target="_blank" class="Previous"><i class="fa fa-user"></i>
         Previous Version</a>
