rate limit warning

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
         <a href="https://ai-cohort.vercel.app" target="_blank" class="Previous"><i class="fa fa-user"></i>
         Previous Version</a>
            <p class="convo"><i>  
-            Sorry, but it is not feasible to preserve conversations. In case of slower internet speeds or heavy traffic on the server, it may take a while to receive a response.<br><br> Luna will take longer to respond now due to model errors.</i></p>   
+            Sorry, but it is not feasible to preserve conversations. In case of slower internet speeds or heavy traffic on the server, it may take a while to receive a response.<br><br> "Please Note: Low rate limit can slow or stop Luna if too many requests made (incl. prompts from other users). A future fix is planned."</i></p>   
       </nav>
       <div id="theme-toggler" class="fa fa-sun"></div>
       <div class="head-menu">
